# XRPAtom

./: README.md
XRPAtom.AI/: .gitignore  README.md  pyproject.toml  requirement.txt  setup.sh
XRPAtom.AI/clients/: weather_api.py
XRPAtom.AI/datasets/: power_consumption.py  weather.py
XRPAtom.AI/datasets/power_consumption/: power_consumtion_dataset.py  raw_power_consumption.py  raw_weather.py
XRPAtom.AI/models/: lstm_model.py
XRPAtom.AI/notebooks/: training_validation_power_consumption.ipynb
XRPAtom.AI/preprocessing/: power_consumption.py
XRPAtom.AI/scripts/: train_validate_power_consumption.py
XRPAtom.AI/shared/: constants.py
XRPAtom.AI/training/: power_consumption_trainer.py  power_consumption_validator.py
XRPAtom.Frontend/: Dockerfile
XRPAtom.Frontend/src/: package.json  pnpm-lock.yaml
XRPAtom.Main/XRPAtom.API/: Program.cs  XRPAtom.API.csproj  XRPAtom.API.http
XRPAtom.Main/XRPAtom.Blockchain/: DependencyInjection.cs  XRPAtom.Blockchain.csproj
XRPAtom.Main/XRPAtom.Infrastructure/: DependencyInjection.cs  XRPAtom.Infrastructure.csproj
consumption-api/: Dockerfile  main.py
consumption-websocket/: Dockerfile  consumption_simulation.py  main.py  meross_device_manager.py  requirements.txt  websocket_manager.py
main-api/: Dockerfile  XRPAtom.sln
main-api/XRPAtom.API/: Program.cs  Startup.cs  XRPAtom.API.csproj  appsettings.json
main-api/XRPAtom.BackgroundServices/: EscrowMonitorService.cs  XRPAtom.BackgroundServices.csproj
main-api/XRPAtom.Blockchain/: DependencyInjection.cs  (+1 more)
weather-api/: Dockerfile  main.py  requirements.txt
(+165 files in other folders)
